added promise tasks

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,16 @@
     <title>JS Fundamentals</title>
 </head>
 <body>
-    Open Console
+    <p>Open Console</p>
+    <br>
+
+    <button id="btn-create-promise" type="button">Create Promise</button>
+    <button id="btn-resolve-promise" type="button">Resolve Promise</button>
+    <button id="btn-reject-promise" type="button">Reject Promise</button>
+    <hr />
+
+    <button id="btn-cancel-promise" type="button">Cancel Promise</button>
+
     <script src="1.primitive-data-types.js"></script>
     <script src="2.arrays.js"></script>
     <script src="3.objects.js"></script>
