added dom tasks

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>Open Console</p>
-    <br>
 
+    <h3>Promises</h3>
     <button id="btn-create-promise" type="button">Create Promise</button>
     <button id="btn-resolve-promise" type="button">Resolve Promise</button>
     <button id="btn-reject-promise" type="button">Reject Promise</button>
@@ -17,10 +17,67 @@
 
     <button id="btn-cancel-promise" type="button">Cancel Promise</button>
 
+    <h3>DOM</h3>
+    <section>
+        <h5>Task 01-03</h5>
+        <div id="t01">
+            <p>Lorem ipsum dolor sit amet</p>
+            <ul id="u01">
+                <li>Item1</li>
+                <li>Item2</li>
+                <li>Item3</li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <h5>Task 04</h5>
+        <div class="t04">
+            <p>Lorem ipsum dolor sit amet</p>
+            <ul id="u01">
+                <li>Item1</li>
+                <li>Item2</li>
+                <li>Item3</li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
+        <div class="t04">
+            <p>Lorem ipsum dolor sit amet</p>
+            <ul id="u01">
+                <li>Item1</li>
+                <li>Item2</li>
+                <li>Item3</li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
+    </section>
+
+     <section>
+        <h5>Task 05</h5>
+        <table>
+            <tr>
+                <td>1.2</td>
+                <td>2.1</td>
+                <td>3.3</td>
+                <td>&nbsp;</td>
+                <td>5.3</td>
+                <td></td>
+            </tr>
+        </table>
+    </section>
+
+    <section>
+        <h5>Task 06-10</h5>
+        <input id="t06" class="c" type="checkbox" checked value="yes" role="gender" data-index="1">
+        <div id="t08">Click me to add new div</div>
+        <button type="button" id="btn">Click me to remove</button>
+    </section>
+
     <script src="1.primitive-data-types.js"></script>
     <script src="2.arrays.js"></script>
     <script src="3.objects.js"></script>
     <script src="4.functions.js"></script>
-    <script src="5.dom-ajax-promises.js"></script>
+    <script src="5.promises.js"></script>
+    <script src="6.dom.js"></script>
 </body>
 </html>
