--- a/app/index.html
+++ b/app/index.html
@@ -79,5 +79,6 @@
     <script src="4.functions.js"></script>
     <script src="5.promises.js"></script>
     <script src="6.dom.js"></script>
+    <script src="7.iterators.js"></script>
 </body>
 </html>
