--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,8 @@
     <script src="2.arrays.js"></script>
     <script src="3.objects.js"></script>
     <script src="4.functions.js"></script>
-    <script src="5.promises.js"></script>
+    <script src="5.1.promises.js"></script>
+    <script src="5.2.async-functions.js"></script>
     <script src="6.dom.js"></script>
     <script src="7.iterators.js"></script>
 </body>
