--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,8 @@
 
     <script src="1.primitive-data-types.js"></script>
     <script src="2.arrays.js"></script>
-    <script src="3.objects.js"></script>
+    <script src="3.1.objects.js"></script>
+    <script src="3.2.date.js"></script>
     <script src="4.functions.js"></script>
     <script src="5.1.promises.js"></script>
     <script src="5.2.async-functions.js"></script>
