--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JS Fundamentals</title>
+    <title>JS Fundamentals, JS-AOF, Modern JavaScript</title>
 </head>
 <body>
     <p>Open Console</p>
@@ -74,13 +74,14 @@
     </section>
 
     <script src="1.primitive-data-types.js"></script>
-    <script src="2.arrays.js"></script>
-    <script src="3.1.objects.js"></script>
-    <script src="3.2.date.js"></script>
-    <script src="4.functions.js"></script>
-    <script src="5.1.promises.js"></script>
-    <script src="5.2.async-functions.js"></script>
-    <script src="6.dom.js"></script>
-    <script src="7.iterators.js"></script>
+    <script src="2.strings.js"></script>
+    <script src="3.arrays.js"></script>
+    <script src="4.objects.js"></script>
+    <script src="5.date.js"></script>
+    <script src="6.functions.js"></script>
+    <script src="7.promises.js"></script>
+    <script src="8.async-functions.js"></script>
+    <script src="9.iterators.js"></script>
+    <script src="10.dom.js"></script>
 </body>
 </html>
